--- a/_config.yml
+++ b/_config.yml
@@ -3,7 +3,7 @@
 #
 
 # Name of your site (displayed in the header)
-name: Wilmer
+name: Wilmer Cruz
 
 # Short bio or description (displayed in the header)
 description: Los Sitios de Película Más Visto en Internet
@@ -21,15 +21,15 @@ footer-links:
   email:
   facebook: wpianchiche
   flickr:
-  github: willycruz/peliculas-online
+  github: willycruz
   instagram: willyhalliwell
   linkedin:
   pinterest:
   rss: # just type anything here for a working RSS icon
   twitter: wpianchiche
   stackoverflow: # your stackoverflow profile, e.g. "users/50476/bart-kiers"
-  youtube: # channel/<your_long_string> or user/<user-name>
-  googleplus: # anything in your profile username that comes after plus.google.com/
+  youtube: WPianchiche29 # channel/<your_long_string> or user/<user-name>
+  googleplus: +WPianchiche29 # anything in your profile username that comes after plus.google.com/
 
 
 # Enter your Disqus shortname (not your username) to enable commenting on posts
@@ -61,15 +61,16 @@ baseurl: ""
 #
 # !! You don't need to change any of the configuration flags below !!
 #
-
+markdown: kramdown
+highlighter: rouge
 permalink: /:title/
 
 # The release of Jekyll Now that you're using
 version: v1.2.0
 
 # Jekyll 3 now only supports Kramdown for Markdown
-markdown: kramdown
-highlighter: rouge
+Kramdown:
+
   # Use GitHub flavored markdown, including triple backtick fenced code blocks
   input: GFM
   # Jekyll 3 and GitHub Pages now only support rouge for syntax highlighting
