--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 name: Wilmer Cruz
 
 # Short bio or description (displayed in the header)
-description: Los Sitios de Película Más Visto en Internet
+description: Blog en Construcción
 
 # URL of your avatar or profile pic (you could use your GitHub profile pic)
 avatar: https://avatars2.githubusercontent.com/u/16138563?s=460&v=4
